<resources>
    <string name="app_name">ARkitektura</string>
    <string name="ccis_name">College of Computer and Information Sciences</string>
    <string name="ccis_history">The college aims to produce future ready and globally competent information and communication technology professionals able to develop solutions for sustainable development.</string>
    <string name="ccis_info">Programs include BSCS and BSIT</string>
    <string name="ccis_department">BS in Computer Science \nBS in Information Technology</string>
    <string name="coe_name">College of Engineering</string>
    <string name="coe_history">The College of Engineering (COE) was formally established in 1986 although it has its beginnings in 1982 when civil, mechanical, and electrical engineering started as curriculum offerings of the then MMSU Institute of Technology (IT). The courses were offered both in Laoag and Batac campuses under the supervision of the IT dean.
                        \n\nOn May 29, 1985, the three-degree programs ceased to be supervised by IT and were called engineering degree programs. The program’s curricula were then revised to suit the requisites of the board of civil, mechanical, and electrical engineering and the demands of the engineering profession as a whole.
                        \n\nIt was in 1986 when the College of Engineering and Technology was established and engineering students and faculty were transferred to the Batac campus.
                        \n\nThe college was renamed College of Engineering in 1993 and more engineering courses were offered: metallurgical, mining, computer, chemical, and electronics, and communications.</string>
    <string name="coe_info">With the advent of new technologies and innovations including opportunities in the field of material science and engineering, the Ceramics Engineering program was offered as a new program added to the existing engineering programs of COE on June 1, 1993.
                        \n\nIn 2010, the College welcomed the transfer of Agricultural Engineering from the then College of Agriculture and Forestry to the College of Engineering.
                        \n\nThe college has been providing relevant and quality engineering education that produces graduates who perform remarkably in agricultural, chemical, civil, electrical, electronics, and mechanical engineer licensure examinations.
                        \n\nSeveral graduates have garnered places in the top 20 of their respective licensure examinations. Likewise, several programs were awarded top performers in licensure examinations."</string>
    <string name="coe_department">Electronics Engineering (ECE)
                                    \nMechanical Engineering (ME)
                                    \nCivil Engineering (CE)
                                    \nComputer Engineering (CPE)
                                    \nChemical Engineering (CHE)
                                    \nCeramics Engineering (CerE)
                                    \nElectrical Engineering (EE)
                                    \nAgricultural and Biosystems Engineering (ABE)</string>
    <string name="cas_name">College of Arts and Sciences</string>
    <string name="cas_history">The College of Arts and Sciences (CAS) is the service college of the Mariano Marcos State University (MMSU).  It was created soon after the University was established in 1978 to accomplish the institutional goal of providing quality liberal education to students, in addition to satisfying the need to offer degree programs in the arts and sciences.
        \n\nThe college started with 45 faculty members distributed among nine departments, each headed by a chairperson. As the student and faculty population increased, the college started offering degree programs and the departments became specialized.</string>
    <string name="cas_info">The college is headed by a dean assisted by a college secretary.</string>
    <string name="cas_department">Languages and Literature
                                    \nPhysical Sciences
                                    \nMathematics
                                    \nBiology
                                    \nPhysical Education
                                    \nSocial Sciences
                                    \nPsychology</string>
    <string name="cafsd_name">College of Agriculture, Food, and Sustainable Development</string>
    <string name="cafsd_history">The College of Agriculture, Food and Sustainable Development (CAFSD) is the premiere college of the university. It traces its roots from the Batac Rural High School (BRHS), which was established in 1918.
        \n\nIn 1969, BRHS was transformed into the Ilocos Norte Institute of Technology (INIT), a pioneering college. Although, it was not formally a college yet, two major fields in agriculture were then offered. These were animal husbandry and agronomy.
        \n\nThus, in 1971, INIT produced its first graduates of the Bachelor of Science in Agriculture program. On December 19, 1974, INIT was converted into Mariano Marcos Memorial College of Science and Technology (MMMCST).
        \n\nThe college then was composed of three departments, namely: agriculture, forestry, and home technology. The College of Agriculture (CA) was formally established when MMMCST was transformed into the Mariano Marcos State University on January 6, 1978 by virtue of Presidential Decree 1279.
        \n\nIts new building was constructed from 1981-1982 and on June 15, 1982; the faculty and the students finally occupied it. The college was renamed College of Agriculture and Forestry (CAF) in 1985.
</string>
    <string name="cafsd_info">By virtue of Memorandum No. 010-048 issued by the Office of the MMSU President on April 27, 2010, CAF was renamed College of Agriculture , Food and Sustainable Development (CAFSD) in order to reflect cohesion of program offerings and for the necessary focus expected of its status as National University of Agriculture.</string>
    <string name="cafsd_department">Environmental Science
                                    \nAgricultural Sciences
                                    \nDevelopment Communication
                                    \nForestry
                                    \nFood Technology
                                    \nAgribusiness</string>
    <string name="cbea_name">College of Business, Economics, and Accountancy</string>
    <string name="cbea_history">"The College of Business, Economics and Accountancy (CBEA) was formally established in 1987. It is committed to develop a corps of competent and socially responsible professionals and entrepreneurs through quality management and business education, community-based research, extension and productivity- oriented programs.
                        \nCBEA is one of the nine academic units of the university.  It is found at the University main campus in Batac, Ilocos Norte.</string>
    <string name="cbea_info">The 1990’s led to many curricular and course changes to address the issue of looking into the relevance of degree offerings. More programs followed - BS Economics in 1989, BSBA - Entrepreneurship in 1990, BSBA-Management Accounting in 1994 and BSBA- Tourism Management in 1995.
                        \n\nOn August 1995, the MMSU Board of Regents (BoR) approved the transformation of the College of Economics and Management (CEM) to College of Business, Economics and Accountancy (CBEA) through BOR Resolution No. 262. This change reflects the widening focus and broader concerns of interest of the College.
                        \n\nThe BSBA - Entrepreneurship program was repackaged with cognates in accounting and cooperatives management in 1996. The BS in Cooperative Management was initially offered in SY 2000.
                        </string>
    <string name="cbea_department">Accountancy
                                    \nBusiness Administration
                                    \nEconomics
                                    \nTourism
                                    \nHospitality Management</string>
    <string name="chs_name">College of Health Sciences</string>
    <string name="chs_history">I miss her.</string>
    <string name="chs_info">The College of Health Sciences (CHS) is continuously pursuing academic excellence and relevant education that caters not only to the health needs of the individual patient or family but also to the community as a whole, making it self-reliant and self-sustaining.
                        \n\nThe graduates of the three programs are performing well in terms of licensure examinations. The University is always being acknowledged by the Professional Regulation Commission (PRC) for continuously producing top-performing graduates. Likewise, the College is producing globally competitive health professionals. Some of its alumni are occupying managerial positions in top health and academic institutions in the local, national and international arena.
                        \n\nThrough the years, the College of Health Sciences has been led by dedicated and committed administrators who always saw to it that the College upholds the virtue of excellence.</string>
    <string name="chs_department">Nursing
                                \nPhysical Therapy
                                \nPharmacy</string>
    <string name="col_name">College of Law</string>
    <string name="col_history">The MMSU College of Law was established in response to a persistent clamor. As far back as before the year 1999, many professionals in the government and private sectors, especially those from the second district of Ilocos Norte, expressed in pursuing a career in law.
                        \n\nSoon, local government units and the Integrated Bar of the Philippines forwarded official and formal representations for MMSU to open a school of law for the many young men and women who do not have the financial resources to go to the big cities to study law.
                        \n\nThe MMSU Law Program started to become a reality on March 11, 2008, when the MMSU Academic Council favorably endorsed its offerings. On March 27, 2008, the MMSU Board of Regents issued MMSU-BOR Resolution No. 957 S 2008, approving the offering of Bachelor of Laws degree at the MMSU Batac Campus.
                        \n\nThe MMSU College of Law formally came into existence in 2009 by virtue of the issuance of Government Permit No 005. Not as plush or as colorful as many law schools, the MMSU College of Law nevertheless has since consistently stood by its mission, vision and goals. Performance in the Bar Examinations has always been above the national average.</string>
    <string name="name_arkitektura">About ARkitektura</string>
    <string name="desc_arkitektura">ARkitektura is an innovative mobile application that blends augmented reality (AR) with architecture and history. Designed to make learning engaging and interactive, ARkitektura allows users to scan QR codes and instantly access 3D models of historical infrastructures.</string>
    <string name="we_are">We are the people who make up ARkitektura</string>
    <string name="we_desc"> We are Yaquobi, a passionate team of Computer Science Students commited to creating smart solutions that make a difference.
        \n\nWe don’t just solve problems - we adapt, innovate, and deliver.</string>
    <string name="kirsten">Kirsten Jacob R. Galam</string>
    <string name="kurt">Kurt Basti A. Juarez</string>
    <string name="quian">Quian Vencel A. Galut</string>
    <string name="gab">Gabriel C. Adriano Jr.</string>
    <string name="fb">Yaquobi</string>
    <string name="number">+63 9912345678</string>
    <string name="email">yaquobi@gmail.com</string>
</resources>