<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AboutUs">

    <include
        android:id="@+id/header"
        layout="@layout/header_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_arkitektura"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lighter"
        android:layout_marginVertical="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_arkitektura"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:justificationMode="inter_word"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_are"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lighter"
        android:layout_marginVertical="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_desc"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/galam_img"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeWidth="1dp"
                app:strokeColor="@color/lighter"
                android:src="@drawable/surname_galam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kirsten"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/juarez_img"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeWidth="1dp"
                app:strokeColor="@color/lighter"
                android:src="@drawable/surname_juarez" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kurt"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/adriano_img"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeWidth="1dp"
                app:strokeColor="@color/lighter"
                android:src="@drawable/surname_adriano" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gab"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="6dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/galut_img"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeWidth="1dp"
                app:strokeColor="@color/lighter"
                android:src="@drawable/surname_galut" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quian"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="6dp"/>
        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/number_id"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/phone_number_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/number"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/email"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/email_address_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/fb_id"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/facebook_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fb"
                android:textSize="16sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
