<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Ccis">

    <include layout="@layout/arrow_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="#D9D9D9">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/collegeLogo"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="12dp"
                            android:src="@drawable/ic_ccis" />

                        <TextView
                            android:id="@+id/collegeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/ccis_name"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/previewBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="20dp"
                        android:drawableLeft="@drawable/hollow_24"
                        android:drawablePadding="8dp"
                        android:text="Preview 3D Model"
                        android:backgroundTint="@color/lighter"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="History :"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:background="#DDDDDD"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginVertical="4dp" />

                    <TextView
                        android:id="@+id/collegeHistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ccis_history"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Additional Info :"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginVertical="4dp" />

                    <TextView
                        android:id="@+id/collegeInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ccis_info"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Departments :"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/black"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"
                        android:layout_marginVertical="4dp" />

                    <TextView
                        android:id="@+id/department"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ccis_department"
                        android:paddingTop="6dp"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
